[tool.poetry]
name = "faucetconfrpc"
version = "0.55.79"
description = "utility to manage FAUCET config files via RPC"
authors = ["Charlie Lewis <clewis@iqt.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
c65faucet = "1.0.100"
grpcio = "1.78.1"
grpcio-tools = "1.78.1"
protobuf = "6.33.5"
prometheus_client = "0.24.1"
pybind11 = "3.0.2"
# dnspython 2.3.0 is not compatible with eventlet
# https://github.com/eventlet/eventlet/issues/781
os-ken = ">=3.0.1"
dnspython = "<2.8.1"
pyopenssl = ">22.1.0"
cryptography = "46.0.5"

[tool.poetry.dev-dependencies]
attrs = "25.4.0"
pylint = "4.0.4"
pytype = "2024.10.11"
pytest = "9.0.2"

[tool.poetry.scripts]
faucetconfrpc_server = "faucetconfrpc.faucetconfrpc_server:serve"
faucetconfrpc_client = "faucetconfrpc.faucetconfrpc_client:main"

[tool.poetry.urls]
homepage = "https://github.com/IQTLabs/faucetconfrpc"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
